--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -28,7 +28,7 @@
           <textarea name="user-comment" class="form-textarea" id="user-comment" rows="10"
             placeholder="Comment"></textarea>
         </div>
-        <button type="submit" class="button lesson-button">Send</button>
+        <button type="submit" class="button -button">Send</button>
         <p class="leave-item-text-down">
           By clicking on “Send” button, you agree to our
           <a class="text-link leave-item-link-text-down" href="/privacy-policy" target="_blank">Privacy
