--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,10 +1,11 @@
 <section class="section section-reviews animated" id="reviews">
   <div class="container">
-    <!-- <h2 class="section-title">What our <span>students</span> say</h2>
+    <h2 class="section-title">Summary<span>information</span> say</h2>
     <p class="section-subtitle">
-      Hear from our students about their learning journey with us, as they share
-      their experiences, progress, and the transformative impact
-    </p> -->
+      We provide clear and structured support at every stage of our cooperation.
+      Below you will find essential information about how we communicate, formalize agreements,
+      and stay connected throughout the entire service process.
+    </p>
 
     <div class="reviews-slider" aria-roledescription="carousel">
       <button class="nav-btn prev" aria-label="Previous review" type="button">
