--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,98 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="container">
-    <p class="footer-desc">
-      Made with ✨ by
-      <a
-        class="footer-link"
-        href="https://goit.global/ua/"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        GoIT team
-      </a>
-    </p>
+    <div class="footer-container">
+      <div class="logo-contacts-container">
+        <!-- Логотип -->
+        <div class="footer-logo">
+          <a class="footer-logo-link" href="/mcs9-incredibles">
+            GreenFrog<span class="logo-span">Office</span>.
+          </a>
+        </div>
+
+        <!-- Контакти -->
+        <ul class="footer-contacts">
+          <li>
+            <p class="footer-contacts-label">Phone number:</p>
+            <a class="footer-phone" href="tel:+380684439426">+420 777-713-093</a>
+          </li>
+          <li>
+            <p class="footer-contacts-label">Address:</p>
+            <address>
+              <a class="footer-phone" href="https://maps.google.com/?q=32a+M.+Prague,CzechRepublic" target="_blank"
+                rel="noopener noreferrer">
+                Prague, Czech Republic
+              </a>
+            </address>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Навігація -->
+      <nav class="footer-nav" aria-label="Footer navigation">
+        <ul class="footer-menu">
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#about">Services</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#lessons">Extended Service Package</a>
+          </li>
+          <!-- <li class="footer-menu-item">
+            <a class="footer-address" href="#teachers">Teachers</a>
+          </li> -->
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#reviews">Reviews</a>
+          </li>
+          <li class="footer-menu-item">
+            <a class="footer-address" href="#application-form">Contact us</a>
+          </li>
+        </ul>
+      </nav>
+
+      <!-- Соціальні мережі
+      <div class="modal_social">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="social-link" href="https://www.facebook.com/goITclub/" aria-label="Facebook" target="blank">
+              <svg class="social-icon" width="26" height="26" aria-hidden="true">
+                <use href="/img/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="social-link" href="https://www.instagram.com/goitclub/" aria-label="Instagram" target="blank">
+              <svg class="social-icon" width="26" height="26" aria-hidden="true">
+                <use href="/img/icons.svg#icon-insta"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="social-link" href="https://www.youtube.com/c/GoIT" aria-label="YouTube" target="blank">
+              <svg class="social-icon" width="26" height="26" aria-hidden="true">
+                <use href="/img/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div> -->
+
+    <!-- Лінія -->
+    <hr class="footer-divider" />
+
+    <!-- Нижня смуга -->
+    <div class="footer-bottom">
+      <p class="footer-copyright">
+        Green Frog Office. All rights reserved.
+      </p>
+      <ul class="footer-legal">
+        <li class="footer-legal-item">
+          <a class="footer-legal-link" href="/privacy-policy" target="_blank" rel="noopener noreferrer">Privacy
+            Policy</a>
+        </li>
+        <li class="footer-legal-item">
+          <a class="footer-legal-link" href="/terms" target="_blank" rel="noopener noreferrer">Terms of Service</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </footer>
