--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,6 @@
 <section class="section section-reviews animated" id="reviews">
   <div class="container">
-    <h2 class="section-title">Summary<span>information</span> say</h2>
+    <h2 class="section-title">Summary <span>information</span> say</h2>
     <p class="section-subtitle">
       We provide clear and structured support at every stage of our cooperation.
       Below you will find essential information about how we communicate, formalize agreements,
@@ -9,19 +9,27 @@
 
     <div class="reviews-slider" aria-roledescription="carousel">
       <button class="nav-btn prev" aria-label="Previous review" type="button">
-        <svg class="nav-btn-icon prev-icon" width="24" height="24" aria-hidden="true">
+        <svg class="nav-btn-icon prev-icon"
+         width="24"
+         height="24"
+         aria-hidden="true">
           <use href="/img/icons.svg#icon-checkmark"></use>
         </svg>
       </button>
 
-      <div class="viewport" tabindex="0" aria-live="polite">
-        <ul class="review-track">
-          <li class="review-item">
-            <div class="info-box">
-              
+      
+              <div class="viewport" tabindex="0" aria-live="polite">
+                <ul class="review-track">
+                  <li class="review-item">
+                    <div class="info-box">
+                      <div class="review-img-box">
+                        <img class="review-img" srcset="
+                                  img/students/img-5@1x.jpg,
+                                  img/students/img-5@2x.jpg 2x
+                                " src="img/students/img-5@1x.jpg" alt="Anna, student" width="50" height="50" />
+                      </div>
               <div class="review-info">
-                <h3 class="info-title">QUESTIONS</h3>
-                <!-- <h4 class="info-subtitle">Student</h4> -->
+                <h3 class="info-title">QUESTIONS</h3>                
               </div>
             </div>
             <p class="review-text">
@@ -34,10 +42,15 @@
 
           <li class="review-item">
             <div class="info-box">
+              <div class="review-img-box">
+                <img class="review-img" srcset="
+                                  img/students/img-6@1x.jpg,
+                                  img/students/img-6@2x.jpg 2x
+                                " src="img/students/img-6@1x.jpg" alt="Mykhailo, student" width="50" height="50" />
+              </div>
 
               <div class="review-info">
-                <h3 class="info-title">SERVICE AGREEMENT</h3>
-                <!-- <h4 class="info-subtitle">Student</h4> -->
+                <h3 class="info-title">SERVICE AGREEMENT</h3>                
               </div>
             </div>
             <p class="review-text">
@@ -49,11 +62,18 @@
 
           <li class="review-item">
             <div class="info-box">
+              <div class="review-img-box">
+                <img class="review-img" srcset="
+                                  img/students/img-7@1x.jpg,
+                                  img/students/img-7@2x.jpg 2x
+                                " src="img/students/img-7@1x.jpg" alt="Victoria, student" width="50" height="50" />
+              </div>
+
 
 
               <div class="review-info">
                 <h3 class="info-title">HOW TO CONTACT US</h3>
-                <!-- <h4 class="info-subtitle">Student</h4> -->
+               
               </div>
             </div>
             <p class="review-text">
