--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,4 +1,4 @@
---- Base / Mobile ---
+
 .hero-content {
   padding: 425px 14px 14px 20px;
   align-items: start;
@@ -7,32 +7,28 @@
 .hero-section {
   border-radius: 16px;
   margin: 8px auto 80px;
-  max-width: 335px;
-
-  /* common background properties */
+  max-width: 335px;  
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-
-  /* default (mobile 1x) */
+  background-repeat: no-repeat;  
   background-image:
     linear-gradient(95.97deg,
       rgba(0, 0, 0, 0.4) 36.36%,
       rgba(0, 0, 0, 0) 51.43%),
-    url(../img/hero/block_mob@1x.jpg);
+    url(/img/hero/block_mob@1x.jpg);
 }
 
-/* webkit image-set fallback for mobile (1x/2x) */
+
 .hero-section {
   background-image:
     linear-gradient(95.97deg,
       rgba(0, 0, 0, 0.4) 36.36%,
       rgba(0, 0, 0, 0) 51.43%),
-    -webkit-image-set(url(../img/hero/block_mob@1x.jpg) 1x,
+    -webkit-image-set(url(/img/hero/block_mob@1x.jpg) 1x,
       url(/img/hero/block_mob@2x.jpg) 2x);
 }
 
-/* retina fallback for mobile (non-webkit) */
+
 @media (-webkit-min-device-pixel-ratio: 2),
 (min-resolution: 192dpi) {
   .hero-section {
@@ -40,7 +36,7 @@
       linear-gradient(95.97deg,
         rgba(0, 0, 0, 0.4) 36.36%,
         rgba(0, 0, 0, 0) 51.43%),
-      url(../img/hero/block_mob@2x.jpg);
+      url(/img/hero/block_mob@2x.jpg);
   }
 }
 
@@ -61,7 +57,7 @@
   
 }
 
-.button {
+.button.hero-button {
   display: flex;
   justify-content: center;
   margin-top: 40px;
@@ -122,7 +118,7 @@
 
 .hero-checkmark-container:hover,
 .hero-checkmark-container:focus {
-  background-color: var(--green-dark);
+  background-color: rgba(129, 167, 109, 1);
 }
 
 .hero-checkmark-container:hover .hero-use,
@@ -141,7 +137,7 @@
       linear-gradient(95.97deg,
         rgba(0, 0, 0, 0.4) 36.36%,
         rgba(0, 0, 0, 0) 51.43%),
-      url(../img/hero/block_tab@1x.jpg);
+      url(/img/hero/block_tab@1x.jpg);
   }
 
   .hero-section {
@@ -149,7 +145,7 @@
       linear-gradient(95.97deg,
         rgba(0, 0, 0, 0.4) 36.36%,
         rgba(0, 0, 0, 0) 51.43%),
-      -webkit-image-set(url(../img/hero/block_tab@1x.jpg) 1x,
+      -webkit-image-set(url(/img/hero/block_tab@1x.jpg) 1x,
         url(/img/hero/block_tab@2x.jpg) 2x);
   }
 
@@ -161,7 +157,7 @@
         linear-gradient(95.97deg,
           rgba(0, 0, 0, 0.4) 36.36%,
           rgba(0, 0, 0, 0) 51.43%),
-        url(../img/hero/block_tab@2x.jpg);
+        url(/img/hero/block_tab@2x.jpg);
     }
   }
 
@@ -201,7 +197,7 @@
       linear-gradient(95.97deg,
         rgba(0, 0, 0, 0.4) 36.36%,
         rgba(0, 0, 0, 0) 51.43%),
-      url(../img/hero/block_desk@1x.jpg);
+      url(/img/hero/block_desk@1x.jpg);
   }
 
   .hero-section {
@@ -209,8 +205,8 @@
       linear-gradient(95.97deg,
         rgba(0, 0, 0, 0.4) 36.36%,
         rgba(0, 0, 0, 0) 51.43%),
-      -webkit-image-set(url(../img/hero/block_desk@1x.jpg) 1x,
-        url(../img/hero/block_desk@2x.jpg) 2x);
+      -webkit-image-set(url(/img/hero/block_desk@1x.jpg) 1x,
+        url(/img/hero/block_desk@2x.jpg) 2x);
   }
 }
 
@@ -222,7 +218,7 @@
       linear-gradient(95.97deg,
         rgba(0, 0, 0, 0.4) 36.36%,
         rgba(0, 0, 0, 0) 51.43%),
-      url(../img/hero/block_desk@2x.jpg);
+      url(/img/hero/block_desk@2x.jpg);
   }
 }
 
