--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,9 +13,9 @@
 @import url('./footer.css');
 @import url('./mobile-menu.css');
 @import url('./hero.css');
-
+/* @import url('./our_lessons.css'); */
 @import url('./about_us.css');
 @import url('./proposal.css');
-
+/* @import url('./our_teachers.css'); */
 @import url('./reviews.css');
 @import url('./leave_app_form.css');
