--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,7 @@
 <section id="hero" class="hero-section">
   <div class="container hero-content">
     <h1 class="hero-text animated">
-      Business and Personal Services in the
+      Services in the
       <span class="hero-english">Czech</span> Republic!
     </h1>
     <a href="#application-form" class="button hero-button animated">Leave an application</a>
