--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <div class="logo-contacts-container">
         <!-- Логотип -->
         <div class="footer-logo">
-          <a class="footer-logo-link" href="/mcs9-incredibles">
+          <a class="footer-logo-link" href="/green-frog">
             GreenFrog<span class="logo-span">Office</span>.
           </a>
         </div>
@@ -13,14 +13,14 @@
         <ul class="footer-contacts">
           <li>
             <p class="footer-contacts-label">Phone number:</p>
-            <a class="footer-phone" href="tel:+380684439426">+420 777-713-093</a>
+            <a class="footer-phone" href="tel:+420777713093">+420 777-713-093</a>
           </li>
           <li>
             <p class="footer-contacts-label">Address:</p>
             <address>
-              <a class="footer-phone" href="https://maps.google.com/?q=32a+M.+Prague,CzechRepublic" target="_blank"
+              <a class="footer-phone" href="https://maps.google.com/?q=Prague.+Czechia" target="_blank"
                 rel="noopener noreferrer">
-                Prague, Czech Republic
+                Prague, Czechia
               </a>
             </address>
           </li>
@@ -33,10 +33,10 @@
           <li class="footer-menu-item">
             <a class="footer-address" href="#about">Services</a>
           </li>
-          <li class="footer-menu-item">
-            <a class="footer-address" href="#lessons">Extended Service Package</a>
-          </li>
           <!-- <li class="footer-menu-item">
+            <a class="footer-address" href="#lessons">Our lessons</a>
+          </li>
+          <li class="footer-menu-item">
             <a class="footer-address" href="#teachers">Teachers</a>
           </li> -->
           <li class="footer-menu-item">
@@ -48,8 +48,8 @@
         </ul>
       </nav>
 
-      <!-- Соціальні мережі
-      <div class="modal_social">
+      <!-- Соціальні мережі -->
+      <!-- <div class="modal_social">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="social-link" href="https://www.facebook.com/goITclub/" aria-label="Facebook" target="blank">
@@ -82,7 +82,7 @@
     <!-- Нижня смуга -->
     <div class="footer-bottom">
       <p class="footer-copyright">
-        Green Frog Office. All rights reserved.
+        GreenFrogOffice.<br>All rights reserved.
       </p>
       <ul class="footer-legal">
         <li class="footer-legal-item">
