--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <nav class="header-nav">
       <div class="nav-logo">
-        <a href="/mcs9-incredibles">
+        <a href="/green-frog">
           <span class="logo-green-span">GreenFrog</span><span class="logo-span">Office</span>
         </a>
 
