--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,16 @@
       <nav class="page-nav">
         <ul class="header-nav-list">
           <li class="nav-item">
-            <a href="#about" class="nav-link">About us</a>
+            <a href="#about" class="nav-link"><nav class="page-nav">
+              <ul class="header-nav-list">
+                <li class="nav-item">
+                  <a href="#about" class="nav-link">Services</a>
+                </li>
+            
+                <li class="nav-item">
+                  <a href="#application-form" class="nav-link">Contact us</a>
+                </li>
+              </ul></a>
           </li>
 
           <li class="nav-item">
@@ -28,8 +37,7 @@
         </ul>
 
         <button onclick="applyTranslations('en')">EN</button>
-        <button onclick="applyTranslations('ru')">RU</button>
-        <button onclick="applyTranslations('cs')">CZ</button>
+        <button onclick="applyTranslations('ru')">RU</button>        
         <button onclick="applyTranslations('ua')">UA</button>
 
       </nav>
@@ -76,7 +84,7 @@
         <nav class="modal-nav">
           <ul class="modal-nav-list">
             <li class="modal-nav-item">
-              <a href="#about" class="nav-link mobile-menu-list">About us</a>
+              <a href="#about" class="nav-link mobile-menu-list">Services</a>
             </li>
 
             <li class="modal-nav-item">
