--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,9 +31,7 @@
               </ul></a>
           </li>
 
-          <li class="nav-item">
-            <a href="#application-form" class="nav-link">Contact us</a>
-          </li>
+          
         </ul>
 
         <button onclick="applyTranslations('en')">EN</button>
@@ -42,7 +40,7 @@
 
       </nav>
 
-      <div class="social">
+      <!-- <div class="social">
         <ul class="social-list">
           <li class="header-nav-item">
             <a class="social-link header-link" href="https://www.facebook.com/goITclub/" target="_blank"
@@ -69,7 +67,7 @@
             </a>
           </li>
         </ul>
-      </div>
+      </div> -->
     </nav>
 
     <!-- header modal -->
