--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -24,8 +24,8 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  list-style: none;
-  counter-reset: aboutCount;
+  /* list-style: none;
+  counter-reset: aboutCount; */
   margin: 0;
   padding: 0;
 
