--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -1,9 +1,8 @@
 .about-wrapper {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
+margin-top: 76px;
+  color: var(--color-text);
+  margin-left: 10%;
+  margin-right: 10%;
 
   @media screen and (min-width: 768px) {
     gap: 32px;
