--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -23,8 +23,8 @@ margin-top: 76px;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  /* list-style: none;
-  counter-reset: aboutCount; */
+  list-style: none;
+  counter-reset: aboutCount;
   margin: 0;
   padding: 0;
 
@@ -67,7 +67,7 @@ margin-top: 76px;
   letter-spacing: -0.02em;
 }
 
-.img_box {
+/* .img_box {
   width: 100%;
   padding: 68px 0 72px 0;
   border-radius: 16px;
@@ -83,4 +83,4 @@ margin-top: 76px;
   @media screen and (min-width: 1280px) {
     padding: 88px 0 92px 0;
   }
-}
+} */
