--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -20,7 +20,8 @@ margin-top: 76px;
 .about-list {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
+  justify-content: center;
   align-items: center;
   gap: 20px;
   list-style: none;
