--- a/src/css/about_us.css
+++ b/src/css/about_us.css
@@ -10,9 +10,9 @@
   }
 
   @media screen and (min-width: 1280px) {
-    display: grid;
+    /* display: grid; */
     /* grid-template-columns: 2fr 1fr; */
-    column-gap: 32px;
+    /* column-gap: 32px; */
     align-items: stretch;
     max-width: 1024px;
   }
