--- a/src/css/leave_app_form.css
+++ b/src/css/leave_app_form.css
@@ -17,9 +17,8 @@
   }
 
   .leave-form {
-    display: flex;
-    justify-content: center;
-    max-width: 1200px;
+    flex: 1 1 500px;
+    max-width: 500px;
     min-width: 0;
     padding-left: 0;
     padding-right: 0;
@@ -355,7 +354,7 @@ input[type='radio']:checked::after {
   }
 }
 
-/* .form-img-container {
+.form-img-container {
   width: 100%;
 }
 
@@ -363,7 +362,7 @@ input[type='radio']:checked::after {
   .form-img-container {
     width: 1024px;
   }
-} */
+}
 
 /* validation */
 
