--- a/src/css/leave_app_form.css
+++ b/src/css/leave_app_form.css
@@ -192,7 +192,7 @@ textarea {
   }
 
   .leave-item-text-down {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.71;
 
 
@@ -360,6 +360,8 @@ input[type='radio']:checked::after {
 
 @media screen and (min-width: 1280px) {
   .form-img-container {
+    display: flex;
+    justify-content: center;
     width: 1024px;
   }
 }
