--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -26,36 +26,38 @@
           <li class="nav-item">
             <a href="#application-form" class="nav-link">Contact us</a>
           </li>
-        </ul>
-
-        <!-- Языковые кнопки -->
-        <div class="lang-switch">
-          <button type="button" class="lang-btn" data-lang="en" onclick="setActiveLang('en')">EN</button>
-          <button type="button" class="lang-btn" data-lang="ru" onclick="setActiveLang('ru')">RU</button>
-          <button type="button" class="lang-btn" data-lang="ua" onclick="setActiveLang('ua')">UA</button>
-        </div>
+        </ul>        
       </nav>      
 
     </nav>
 
-    <!-- Модальное меню бургера -->
+    <!-- Модальное меню бургера
     <div class="burger_modal js-menu-container" id="header__mobile" role="dialog" aria-modal="true">
       <div class="burger_container">
         <button type="button" class="close-btn js-close-menu" aria-label="close menu">
           <svg class="modal-close" role="img" width="32" height="32">
             <use class="icon--wide" href="/img/icons.svg#icon-close_bold"></use>
           </svg>
-        </button>
+        </button> -->
 
         <nav class="modal-nav">
           <ul class="modal-nav-list">
             <li class="modal-nav-item">
               <a href="#about" class="nav-link mobile-menu-list">Services</a>
             </li>
+            <li class="nav-item">
+              <a href="#reviews" class="nav-link">Reviews</a>
+            </li>
             <li class="modal-nav-item">
               <a href="#application-form" class="nav-link mobile-menu-list">Contact</a>
             </li>
           </ul>
+          <!-- Языковые кнопки -->
+          <div class="lang-switch">
+            <button type="button" class="lang-btn" data-lang="en" onclick="setActiveLang('en')">EN</button>
+            <button type="button" class="lang-btn" data-lang="ru" onclick="setActiveLang('ru')">RU</button>
+            <button type="button" class="lang-btn" data-lang="ua" onclick="setActiveLang('ua')">UA</button>
+          </div>
         </nav>
       </div>
     </div>
