--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -43,10 +43,10 @@
         <nav class="modal-nav">
           <ul class="modal-nav-list">
             <li class="modal-nav-item">
-              <a href="#about" class="nav-link mobile-menu-list">Services</a>
+              <a href="#services" class="nav-link mobile-menu-list">Services</a>
             </li>
             <li class="nav-item">
-              <a href="#reviews" class="nav-link">Reviews</a>
+              <a href="#reviews" class="nav-link mobile-menu-list">Reviews</a>
             </li>
             <li class="modal-nav-item">
               <a href="#application-form" class="nav-link mobile-menu-list">Contact</a>
