--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -40,18 +40,19 @@
           </svg>
         </button> -->
 
-        <nav class="modal-nav">
-          <ul class="modal-nav-list">
-            <li class="modal-nav-item">
-              <a href="#services" class="nav-link mobile-menu-list">Services</a>
+        <nav class="page-nav">
+          <ul class="header-nav-list">
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About us</a>
+            </li>            
+            <li class="nav-item">
+              <a href="#reviews" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-              <a href="#reviews" class="nav-link mobile-menu-list">Reviews</a>
-            </li>
-            <li class="modal-nav-item">
-              <a href="#application-form" class="nav-link mobile-menu-list">Contact</a>
+              <a href="#application-form" class="nav-link">Contact us</a>
             </li>
           </ul>
+        </nav>
           <!-- Языковые кнопки -->
           <div class="lang-switch">
             <button type="button" class="lang-btn" data-lang="en" onclick="setActiveLang('en')">EN</button>
