--- a/src/css/header.css
+++ b/src/css/header.css
@@ -29,7 +29,7 @@
 
 }
 
-.burger-btn {
+/* .burger-btn {
   cursor: pointer;
   width: 32px;
   height: 32px;
@@ -48,9 +48,9 @@
   @media screen and (min-width: 1280px) {
     display: none;
   }
-}
+} */
 
-.burger-btn:hover,
+/* .burger-btn:hover,
 .burger-btn:focus {
   color: rgb(231, 100, 7);
 }
@@ -69,9 +69,9 @@
   @media screen and (min-width: 768px) {
     display: inline;
   }
-}
+} */
 
-.burger-icon {
+/* .burger-icon {
   display: block;
   width: 32px;
   height: 32px;
@@ -86,9 +86,9 @@
 
 .no-scroll {
   overflow: hidden;
-}
+} */
 
-.burger_modal {
+/* .burger_modal {
   position: fixed;
   inset: 0;
   opacity: 0;
@@ -103,9 +103,9 @@
   opacity: 1;
   pointer-events: auto;
   visibility: visible;
-}
+} */
 
-.burger_container {
+/* .burger_container {
   position: absolute;
   top: 0;
   right: 0;
@@ -123,13 +123,13 @@
   transform: translateX(100%);
   transition: var(--common-transition);
   transition-property: transform;
-}
+} */
 
-.burger_modal.is-open .burger_container {
+/* .burger_modal.is-open .burger_container {
   transform: translateX(0);
-}
+} */
 
-.close-btn {
+/* .close-btn {
   align-self: flex-end;
   background: transparent;
   padding: 0;
@@ -148,9 +148,9 @@
     width: 50px;
     height: 50px;
   }
-}
+} */
 
-.close-btn:hover,
+/* .close-btn:hover,
 .close-btn:focus {
   border: 1px solid var(--lighter-green);
   background: var(--gradient-green);
@@ -161,9 +161,9 @@
     width: 40px;
     height: 40px;
   }
-}
+} */
 
-.modal-close {
+/* .modal-close {
   display: block;
   stroke: currentColor;
   fill: none;
@@ -172,17 +172,17 @@
 .modal-nav-list {
   display: flex;
   flex-direction: column;
-  /* если список вертикальный */
+  
   justify-content: center;
   align-items: center;
   gap: 24px;
-  /* расстояние между кнопками */
+  
   padding: 0;
   margin: 0;
   list-style: none;
-}
+} */
 
-.modal-nav-item .nav-link {
+/* .modal-nav-item .nav-link {
   color: rgb(255, 255, 255);
   font-size: 24px;
   font-weight: 700;
@@ -198,7 +198,7 @@
   position: relative;
   width: 100%;
   text-align: center;
-}
+} */
 
 .nav-link::after {
   content: '';
@@ -220,14 +220,14 @@
   transform: translateX(-50%) scaleX(1);
 }
 
- .social-list {
+ /* .social-list {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 12px;
-} 
+}  */
 
- .social-item {
+ /* .social-item {
   width: 44px;
   height: 44px;
   border-radius: 10px;
@@ -235,9 +235,9 @@
   transition: var(--common-transition);
   transition-property: border, background;
   cursor: pointer;
-} 
+}  */
 
- .social-link {
+ /* .social-link {
   background: transparent;
   width: 100%;
   height: 100%;
@@ -249,21 +249,21 @@
   justify-content: center;
   padding: 8px;
   border-radius: 10px;
-}
+} */
 
-.social-icon {
+/* .social-icon {
   display: block;
   width: 26px;
   height: 26px;
   fill: currentColor;
   stroke: none;
-}
+} */
 
-.social-item:hover,
+/* .social-item:hover,
 .social-item:focus {
   border: 1px solid transparent;
   background: var(--gradient-green-dark);
-} 
+}  */
 
 .header-nav-item {
   width: 44px;
@@ -305,12 +305,12 @@
   }
 }
 
-.modal-nav-link {
+/* .modal-nav-link {
   color: rgb(18, 20, 23);
   font-size: 24px;
   font-weight: 700;
   line-height: 1.29;
-}
+} */
 
 .lang-switch {
   display: flex;
