--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,9 +9,9 @@
         </a>
       </div>          
 
-    </nav>    
+        
 
-        <nav class="page-nav">
+         <div class="page-nav"> 
           <ul class="header-nav-list">
             <li class="nav-item">
               <a href="#about" class="nav-link">Services</a>
@@ -23,6 +23,7 @@
               <a href="#application-form" class="nav-link">Contact us</a>
             </li>
           </ul>
+         </div>
         
           <!-- Языковые кнопки -->
           <div class="lang-switch">
@@ -30,9 +31,9 @@
             <button type="button" class="lang-btn" data-lang="ru" onclick="setActiveLang('ru')">RU</button>
             <button type="button" class="lang-btn" data-lang="ua" onclick="setActiveLang('ua')">UA</button>
           </div>
-        </nav>
-      </div>
-    </div>
+        
+   
+      </nav>
 
   </div>
 </header>
