--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -3,8 +3,9 @@
     <h2 class="section-title" data-i18n="form.title">
       Leave an application
     </h2>
+
     <div class="form-img-container">
-      <p class="leave-item-text-up" data-i18n="form.subtitle"></p>
+      <p class="leave-item-text-up" data-i18n="form.subtitle">
         Please use the form below to contact us. Enter your name, email, and
         message and we'll get back to you shortly.
       </p>
@@ -12,31 +13,10 @@
       <form class="leave-form" action="#">
         <div class="form-container">
           <label class="visually-hidden" for="user-name">Name</label>
-          <input class="form-input" placeholder="Name" data-i18n-placeholder="form.name">
+          <input class="form-input" type="text" id="user-name" placeholder="Name" data-i18n-placeholder="form.name"
             pattern="^[A-Za-zА-Яа-яЁёІіЇїЄє\s]{2,}$" title="Мінімум 2 літери, тільки букви та пробіли" required />
         </div>
+
         <div class="form-container">
           <label class="visually-hidden" for="phone">Phone</label>
-          <input class="form-input" placeholder="Phone" data-i18n-placeholder="form.phone">
-            pattern="^\+38\s?\(0\d{2}\)\s?\d{3}-\d{2}-\d{2}$" title="Формат: +38 (0XX) XXX-XX-XX" required />
-        </div>
-        <div class="form-container">
-          <label class="visually-hidden" for="mail">Email</label>
-          <input class="form-input" placeholder="Email" data-i18n-placeholder="form.email">
-            pattern="^[^@\s]+@[^@\s]+\.[^@\s]+$" title="Введіть правильний email" required />
-        </div>
-        <div class="textarea-container">
-          <label class="visually-hidden" for="user-comment">Comment</label>
-          <textarea noted class="form-textarea" placeholder="Comment" data-i18n-placeholder="form.comment"></textarea>
-        </div>
-        <button class="button" data-i18n="form.send">Send</button>
-        <p class="leave-item-text-down">
-          By clicking on “Send” button, you agree to our
-          <a class="text-link leave-item-link-text-down" href="/privacy-policy" target="_blank">Privacy
-            Policy,</a><br>and allow Promodo to use this information for marketing purposes.
-        </p>
-      </form>
-    </div>
-  </div>
-  </div>
-</section>
+          <input class="form-input" type="tel" id="phone" placeholder="Phone" data-i18n-placeholder="form.phon
