--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,11 +12,11 @@
         <!-- Контакти -->
         <ul class="footer-contacts">
           <li>
-            <p class="footer-contacts-label">Phone number:</p>
+            <p class="footer-contacts-label" data-i18n="footer.phone.label">Phone number:</p>
             <a class="footer-phone" href="tel:+420777713093">+420 777-713-093</a>
           </li>
           <li>
-            <p class="footer-contacts-label">Address:</p>
+            <p class="footer-contacts-label" data-i18n="footer.address.label">Address:</p>
             <address>
               <a class="footer-phone" href="https://maps.google.com/?q=Prague.+Czechia" target="_blank"
                 rel="noopener noreferrer">
@@ -33,12 +33,7 @@
           <li class="footer-menu-item">
             <a class="footer-address" href="#about">Services</a>
           </li>
-          <!-- <li class="footer-menu-item">
-            <a class="footer-address" href="#lessons">Our lessons</a>
-          </li>
-          <li class="footer-menu-item">
-            <a class="footer-address" href="#teachers">Teachers</a>
-          </li> -->
+          
           <li class="footer-menu-item">
             <a class="footer-address" href="#reviews">Reviews</a>
           </li>
@@ -48,35 +43,7 @@
         </ul>
       </nav>
 
-      <!-- Соціальні мережі -->
-      <!-- <div class="modal_social">
-        <ul class="footer-social-list">
-          <li class="footer-social-item">
-            <a class="social-link" href="https://www.facebook.com/goITclub/" aria-label="Facebook" target="blank">
-              <svg class="social-icon" width="26" height="26" aria-hidden="true">
-                <use href="/img/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="social-link" href="https://www.instagram.com/goitclub/" aria-label="Instagram" target="blank">
-              <svg class="social-icon" width="26" height="26" aria-hidden="true">
-                <use href="/img/icons.svg#icon-insta"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="social-link" href="https://www.youtube.com/c/GoIT" aria-label="YouTube" target="blank">
-              <svg class="social-icon" width="26" height="26" aria-hidden="true">
-                <use href="/img/icons.svg#icon-youtube"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div> -->
-
-    <!-- Лінія -->
+   
     <hr class="footer-divider" />
 
     <!-- Нижня смуга -->
