--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,20 +1,30 @@
-
 <section id="hero" class="hero-section">
   <div class="container hero-content">
-  <h1 class="hero-text animated">
-    <span data-i18n="hero.title.before">Services in the</span>
-    <span class="hero-english" data-i18n="hero.title.highlight">Czech</span>
-    <span data-i18n="hero.title.after">Republic!</span>
-  </h1>
-    <a href="#application-form" class="button hero-button animated" data-i18n="hero.button">
+    <h1 class="hero-text animated">
+      <span data-i18n="hero.title.before">Services in the</span>
+      <span class="hero-english" data-i18n="hero.title.highlight">Czech</span>
+      <span data-i18n="hero.title.after">Republic!</span>
+    </h1>
+    <a
+      href="#application-form"
+      class="button hero-button animated"
+      data-i18n="hero.button"
+    >
       Leave an application
     </a>
     <div class="hero-checkmark">
-      <a href="#footer" class="hero-checkmark-container animated" aria-label="Footer button">
+      <a
+        href="#footer"
+        class="hero-checkmark-container animated"
+        aria-label="Footer button"
+      >
         <svg class="hero-svg" aria-hidden="true">
-          <use class="hero-use" xlink:href="/img/icons.svg#icon-checkmark"></use>
+          <use
+            class="hero-use"
+            xlink:href="/img/icons.svg#icon-checkmark"
+          ></use>
         </svg>
       </a>
     </div>
-    </div>
-    </section>
+  </div>
+</section>
