--- a/src/partials/leave_app_form.html
+++ b/src/partials/leave_app_form.html
@@ -13,8 +13,12 @@
       <form class="leave-form" action="#">
         <div class="form-container">
           <label class="visually-hidden" for="user-name">Name</label>
-          <input class="form-input" type="text" id="user-name" placeholder="Name" data-i18n-placeholder="form.name"
-            pattern="^[A-Za-zА-Яа-яЁёІіЇїЄє\s]{2,}$" title="Мінімум 2 літери, тільки букви та пробіли" required />
+          <input class="form-input"
+           type="text"
+           id="user-name"
+           placeholder="Name"
+           data-i18n-placeholder="form.name"
+           pattern="^[A-Za-zА-Яа-яЁёІіЇїЄє\s]{2,}$" title="Мінімум 2 літери, тільки букви та пробіли" required />
         </div>
 
         <div class="form-container">
