--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -8,7 +8,6 @@
       </p>
       <div class="proposal-inner">
         <div class="proposal-wrapper">
-
           <ul class="proposal-list">
             <li class="proposal-item">
               <div class="icon-wrapper">
@@ -17,8 +16,7 @@
                 </svg>
               </div>
               <p class="proposal-item-text">
-                Document
-                Apostille of personal and corporate documents for
+                Document Apostille of personal and corporate documents for
                 official use in the Czech Republic and abroad.
               </p>
             </li>
@@ -29,9 +27,9 @@
                 </svg>
               </div>
               <p class="proposal-item-text">
-                Datová schránka Setup
-                Application preparation and full assistance in
-                opening a datová schránka, including client presence.
+                Datová schránka Setup Application preparation and full
+                assistance in opening a datová schránka, including client
+                presence.
               </p>
             </li>
             <li class="proposal-item">
@@ -41,9 +39,8 @@
                 </svg>
               </div>
               <p class="proposal-item-text">
-                Bank Account Opening
-                Support with opening personal and corporate bank accounts
-                in Czech banks, with required client presence.
+                Bank Account Opening Support with opening personal and corporate
+                bank accounts in Czech banks, with required client presence.
               </p>
             </li>
             <li class="proposal-item">
@@ -53,22 +50,34 @@
                 </svg>
               </div>
               <p class="proposal-item-text">
-                Service Power of Attorney
-                Preparation of a power of attorney for full service support,
-                notarized at the client’s consulate if required.
+                Service Power of Attorney Preparation of a power of attorney for
+                full service support, notarized at the client’s consulate if
+                required.
               </p>
             </li>
           </ul>
-          <a href="#application-form" class="button proposal-button">Leave an application</a>
+          <a href="#application-form" class="button proposal-button"
+            >Leave an application</a
+          >
           <div class="books-image-wrapper">
             <picture>
-              <source srcset="
+              <source
+                srcset="
                   /img/books/books@1x.avif 1x,
                   /img/books/books@2x.avif 2x
-                " type="image/avif" />
-              <source srcset="/img/books/books@1x.png 1x, /img/books/books@2x.png 2x" />
-              <img src="/img/books/books@1x.png" alt="Tall stack of books" class="books-img animated" width="321"
-                height="368" />
+                "
+                type="image/avif"
+              />
+              <source
+                srcset="/img/books/books@1x.png 1x, /img/books/books@2x.png 2x"
+              />
+              <img
+                src="/img/books/books@1x.png"
+                alt="Tall stack of books"
+                class="books-img animated"
+                width="321"
+                height="368"
+              />
             </picture>
           </div>
         </div>
